<resources>
    <string name="app_name">Todo</string>
    <string name="add">+ ADD</string>
    <string name="task_title">Task\'s Title</string>
    <string name="deadline">Deadline:</string>
    <string name="april_27th_2023_09_30_am">April 27th, 2023 09:30 AM</string>
    <string name="enter_your_new_task">Enter your new task...</string>
    <string name="new_task_s_deadline">New task\'s deadline</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="no_deadline">NO DEADLINE</string>
    <string name="delete_task_question">Delete task?</string>
    <string name="are_you_sure_that_you_want_to_delete_this_task">Are you sure that you want to delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="hey_it_s_time_to_complete_this_task">Hey! It\'s time to complete this task!</string>
    <string name="it_is_only_10_minutes_left_until_your_deadline_on">It is only 10 minutes left until your deadline on</string>
    <string name="_10_minutes_remaining">10 minutes remaining!</string>
    <string name="hi">Hi</string>
    <string name="today_is">Today is</string>
    <string name="status">Status</string>
    <string name="missed">Missed</string>
    <string name="urgent">Urgent</string>
    <string name="done">Done</string>
    <string name="notifications_rescheduled">Notifications rescheduled</string>
    <string name="the_notifications_for_the_tasks_have_just_been_rescheduled">The notifications for the tasks have just been rescheduled after device rebooted</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go back</string>
    <string name="edit_task">Edit task</string>
    <string name="title">Title</string>
    <string name="save_changes">Save changes</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="do_you_want_to_save_changes_before_leaving">Do you want to save changes before leaving?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Show list of uncompleted tasks on your home screen</string>
    <string name="what_to_do">What To do?</string>
    <string name="button_add_new_task">Button Add New Task</string>
    <string name="add_new_task">Add new task</string>
    <string name="check_as_done">Check as done</string>
</resources>