<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/rounded_white_rectangle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/widget_item_title"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/task_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/widget_item_deadline"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:text="@string/deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/widget_item_checkbox"
        android:src="@drawable/unchecked"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/check_as_done" />

</LinearLayout>