<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/new_task_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:inputType="text"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:textColorHint="#888888"
        android:background="@drawable/white_3d_background_normal"
        android:hint="@string/enter_your_new_task"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:minHeight="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/new_task_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/new_task_deadline_label"
        android:text="@string/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/new_task_deadline_date"
        app:layout_constraintBottom_toBottomOf="@id/new_task_deadline_date"
        app:layout_constraintStart_toStartOf="@id/new_task_edittext"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_task_deadline_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:background="@drawable/primary_button"
        app:layout_constraintTop_toBottomOf="@id/new_task_edittext"
        app:layout_constraintStart_toEndOf="@id/new_task_deadline_label"
        app:layout_constraintEnd_toStartOf="@id/new_task_deadline_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_task_deadline_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/select_time"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/primary_button"
        app:layout_constraintTop_toTopOf="@id/new_task_deadline_date"
        app:layout_constraintBottom_toBottomOf="@id/new_task_deadline_date"
        app:layout_constraintStart_toEndOf="@id/new_task_deadline_date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:minHeight="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/primary_button"
        app:layout_constraintStart_toEndOf="@id/new_task_edittext"
        app:layout_constraintTop_toTopOf="@id/new_task_edittext"
        app:layout_constraintBottom_toBottomOf="@id/new_task_edittext"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_deadline_date"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/task_item_view" />

</androidx.constraintlayout.widget.ConstraintLayout>