<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity">

    <ImageButton
        android:id="@+id/edit_task_back_button"
        android:src="@drawable/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerInside"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:text="@string/edit_task"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/edit_task_back_button"
        app:layout_constraintBottom_toBottomOf="@id/edit_task_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/edit_task_title_label"
        android:text="@string/title"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_task_title"
        app:layout_constraintStart_toStartOf="@id/edit_task_back_button"
        app:layout_constraintTop_toBottomOf="@id/edit_task_back_button" />

    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/edit_task_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_task_title_label"
        app:layout_constraintBottom_toBottomOf="@id/edit_task_title_label"
        android:inputType="text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/edit_task_deadline_label"
        android:text="@string/deadline"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_task_deadline_datetime"
        app:layout_constraintStart_toStartOf="@id/edit_task_back_button"
        app:layout_constraintTop_toBottomOf="@id/edit_task_title" />

    <EditText
        android:id="@+id/edit_task_deadline_datetime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/edit_task_deadline_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_task_deadline_label"
        app:layout_constraintBottom_toBottomOf="@id/edit_task_deadline_label"
        android:inputType="none"
        android:focusable="false"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_task_save_button"
        android:text="@string/save"
        android:background="@drawable/primary_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_task_deadline_datetime"
        app:layout_constraintEnd_toEndOf="@id/edit_task_deadline_datetime" />

</androidx.constraintlayout.widget.ConstraintLayout>