<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/main_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_3d_background">

            <TextView
                android:id="@+id/task_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/task_item_deadline_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5"/>

            <TextView
                android:id="@+id/task_item_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:background="@drawable/rounded_red_rectangle"
                android:paddingHorizontal="15dp"
                android:textColor="#EFEFEF"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/task_item_title"
                app:layout_constraintEnd_toEndOf="@id/task_item_checkbox"/>

            <TextView
                android:id="@+id/task_item_deadline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/task_item_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/task_item_title" />

            <TextView
                android:id="@+id/task_item_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/april_27th_2023_09_30_am"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/task_item_deadline_label"
                app:layout_constraintStart_toEndOf="@id/task_item_deadline_label" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/task_item_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:buttonTint="@color/brand_green"
                app:layout_constraintBottom_toBottomOf="@id/task_item_deadline"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>